feat(gateway): implement dynamic routing and websocket support
- Add DynamicRouteFilter to handle dynamic routing based on URL mapping
- Create FilterConfig to configure routes including websocket support
- Implement GatewayApplication with custom route locator
- Update websocket.js to connect to new WebSocket server port

--- a/ws/src/main/resources/application.yaml
+++ b/ws/src/main/resources/application.yaml
@@ -1,3 +1,4 @@
+
 spring:
   application:
     name: ws
@@ -9,3 +10,5 @@ spring:
 logging:
   level:
     org.springframework.web: DEBUG
+server:
+  port: 8201
