feat(gateway): add support for HTTP and WebSocket routing
- Implement separate routes for WebSocket and HTTP requests
- Add log4j2 configuration for improved logging
- Create Maven project configuration for Spring Cloud Gateway

--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -1,20 +1,15 @@
-# ??????
 server:
   port: 3001
-# Spring?????????
 spring:
   application:
     name: gateway
 
+#logging:
+#  level:
+#    org.springframework.cloud.gateway: DEBUG
+#    reactor.netty.http.client: DEBUG
+#    reactor.netty.http.server: DEBUG
 
-  cloud:
-    gateway:
-      # ??????
-      routes:
-        # ????
-        - id: fund
-          # ??URI
-          uri: http://localhost:7001
-          # ????
-          predicates:
-          - Path=/r4j/**
+dynamic-route:
+  url-mapping: "{'pathA': 'http://localhost:8101', 'pathB': 'http://localhost:8102', 'pathC': 'http://localhost:8103'}"
+#  url-mapping: "{pathA: 'http://localhost:8101', pathB: 'http://localhost:8102', pathC: 'http://localhost:8103'}"
