--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -64,7 +64,7 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                         </path>
-                    </annotationProcessorPaths>
+                    </annotationProcessorPaths><source>17</source><target>17</target>
                 </configuration>
             </plugin>
             <plugin>
